--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,45 @@
-asttokens @ file:///opt/conda/conda-bld/asttokens_1646925590279/work
-backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
-Bottleneck @ file:///tmp/build/80754af9/bottleneck_1648028898966/work
-certifi==2021.10.8
-debugpy @ file:///tmp/build/80754af9/debugpy_1637091799509/work
-decorator @ file:///opt/conda/conda-bld/decorator_1643638310831/work
-entrypoints @ file:///tmp/build/80754af9/entrypoints_1649926439650/work
-executing @ file:///opt/conda/conda-bld/executing_1646925071911/work
-ipykernel @ file:///tmp/build/80754af9/ipykernel_1647000773790/work/dist/ipykernel-6.9.1-py3-none-any.whl
-ipython @ file:///opt/conda/conda-bld/ipython_1651600145335/work
-jedi @ file:///tmp/build/80754af9/jedi_1644297102865/work
-jupyter-client @ file:///opt/conda/conda-bld/jupyter_client_1650622202839/work
-jupyter-core @ file:///opt/conda/conda-bld/jupyter_core_1651671229925/work
-matplotlib-inline @ file:///tmp/build/80754af9/matplotlib-inline_1628242447089/work
-mkl-fft==1.3.1
-mkl-random @ file:///tmp/build/80754af9/mkl_random_1626186066731/work
-mkl-service==2.4.0
-nest-asyncio @ file:///tmp/build/80754af9/nest-asyncio_1649847906199/work
-numexpr @ file:///tmp/build/80754af9/numexpr_1640689833592/work
-numpy @ file:///opt/conda/conda-bld/numpy_and_numpy_base_1652801679809/work
-packaging @ file:///tmp/build/80754af9/packaging_1637314298585/work
-pandas==1.4.2
-parso @ file:///opt/conda/conda-bld/parso_1641458642106/work
-pexpect @ file:///tmp/build/80754af9/pexpect_1605563209008/work
-pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
-prompt-toolkit @ file:///tmp/build/80754af9/prompt-toolkit_1633440160888/work
-ptyprocess @ file:///tmp/build/80754af9/ptyprocess_1609355006118/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
-pure-eval @ file:///opt/conda/conda-bld/pure_eval_1646925070566/work
-Pygments @ file:///opt/conda/conda-bld/pygments_1644249106324/work
-pyparsing @ file:///tmp/build/80754af9/pyparsing_1635766073266/work
-python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
-pytz==2021.3
-pyzmq @ file:///tmp/build/80754af9/pyzmq_1638434985866/work
-six @ file:///tmp/build/80754af9/six_1644875935023/work
-stack-data @ file:///opt/conda/conda-bld/stack_data_1646927590127/work
-tornado @ file:///tmp/build/80754af9/tornado_1606942317143/work
-traitlets @ file:///tmp/build/80754af9/traitlets_1636710298902/work
-wcwidth @ file:///Users/ktietz/demo/mc3/conda-bld/wcwidth_1629357192024/work
+asttokens==2.0.5
+backcall==0.2.0
+certifi==2022.12.7
+comm==0.1.2
+contourpy==1.0.6
+cycler==0.11.0
+debugpy==1.5.1
+decorator==5.1.1
+entrypoints==0.4
+executing==0.8.3
+fonttools==4.38.0
+ipykernel==6.19.2
+ipython==8.7.0
+jedi==0.18.1
+jupyter_client==7.4.8
+jupyter_core==5.1.1
+kiwisolver==1.4.4
+matplotlib==3.6.2
+matplotlib-inline==0.1.6
+nest-asyncio==1.5.6
+numpy==1.24.1
+packaging==22.0
+pandas==1.5.2
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==9.4.0
+pip==22.3.1
+platformdirs==2.5.2
+prompt-toolkit==3.0.36
+psutil==5.9.0
+ptyprocess==0.7.0
+pure-eval==0.2.2
+Pygments==2.11.2
+pyparsing==3.0.9
+python-dateutil==2.8.2
+pytz==2022.7
+pyzmq==23.2.0
+setuptools==65.5.0
+six==1.16.0
+stack-data==0.2.0
+tornado==6.2
+traitlets==5.7.1
+wcwidth==0.2.5
+wheel==0.37.1
